fix euclid templates install

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,4 +14,4 @@ console_scripts =
     generate_tab = mmoda_tab_generator.tab_generator:main
 
 [options.package_data]
-mmoda_tab_generator = templates/*
+mmoda_tab_generator = templates/*, templates/euclid/*
